# tlap-rs

./: Cargo.toml  README.md  RELEASE_NOTES.md  perform_stt  perform_stt.sh
native_client/lin-cuda/: generate_scorer_package
native_client/win-cpu/: KenLM_License_Info.txt
src/: build.rs  enums.rs  main.rs  speech.rs  subtitle.rs
