[package]
name = "tlap"
description = "Transliterate Language for an Accessibility Purpose"
version = "0.4.0"
authors = ["Bricky <bricky149@teknik.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coqui-stt = "1.0.*"
audrey = "*"
dasp_interpolate = { version = "*", features = ["linear"] }
dasp_signal = "*"
hound = "*"
portaudio = "*"

[profile.release]
codegen-units = 4
lto = true
panic = "abort"
