[package]
name = "tlap"
description = "Transliterate Language for an Accessibility Purpose"
version = "0.5.0"
authors = ["Bricky <bricky149@teknik.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coqui-stt = "*"
cpal = "*"
hound = "*"

[profile.release]
lto = true
opt-level = "s"
panic = "abort"
strip = true
